add changes and bug fixes

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
-  right: 100vh;
+  height: 100vh;
 }
 
 body * {
@@ -81,6 +81,12 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -95,8 +101,8 @@ body * {
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+  
 }
 
 /* Links */
@@ -170,13 +176,31 @@ footer {
 }
 
 /* midia queries */
-@media (min-width: 700px){
-  
+@media (min-width: 700px) {
   :root {
-    --bg-url: url('/.assets/bg-desktop-dark.jpg');
+    --bg-url: url(./assets/bg-desktop.jpg);
   }
-  
+
   .light {
-    --bg-url: url('/.assets/bg-desktop-light.jpg');
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
